          priority over all others, and picking the device with the most free
          space if there are multiple devices with the highest priority.

        * /etc/crypttab support has learnt a new keyfile-timeout= per-device
          option that permits selecting the timout how long to wait for a
          device with an encryption key before asking for the password.

        Contributions from: Aaron Barany, Adrian Bunk, Alan Jenkins, Andrej
        Valek, Anita Zhang, Arian van Putten, Balint Reczey, Bastien Nocera,
        Ben Boeckel, Benjamin Robin, camoz, Chen Qi, Chris Chiu, Chris Down,
        Christian Kellner, Clinton Roy, Connor Reeder, Daniele Medri, Dan
        Streetman, Dave Reisner, Dave Ross, David Art, David Tardon, Debarshi
        Ray, Dominick Grift, Donald Buczek, Douglas Christman, Eric DeVolder,
        Evgeny Vereshchagin, Feldwor, Felix Riemann, Florian Dollinger, Franck
        Bui, Frantisek Sumsal, Franz Pletz, Hans de Goede, Iago López Galeiras,
        Insun Pyo, Ivan Shapovalov, Iwan Timmer, Jack, Jakob Unterwurzacher,
        Jan Klötzke, Jan Pokorný, Jan Synacek, Jeka Pats, Jérémy Rosen, Jiri
        Pirko, Joe Lin, Joerg Behrmann, Joe Richey, Jóhann B. Guðmundsson,
        Johannes Schmitz, Jonathan Rouleau, Jorge Niedbalski, Kai Lüke, Karel
        Zak, Kashyap Chamarthy, Krayushkin Konstantin, Lennart Poettering,
        Lubomir Rintel, Luca Boccassi, Luís Ferreira, Marc-André Lureau, Markus
        Felten, Martin Pitt, Michael Biebl, Michael Olbrich, Michael Prokop,
        Michael Stapelberg, Michael Zhivich, Michal Koutný, Michal Sekletar,
        Mike Gilbert, Milan Broz, mpe85, Network Silence, Oliver Harley,
        pan93412, Paul Menzel, pEJipE, Peter A. Bigot, Philip Withnall, Piotr
        Drąg, Rafael Fontenelle, Roberto Santalla, root, RussianNeuroMancer,
        Sebastian Jennen, shinygold, Shreyas Behera, Simon Schricker, Susant
        Sahani, Thadeu Lima de Souza Cascardo, Theo Ouzhinski, Thiebaud